--- a/sass/common.scss
+++ b/sass/common.scss
@@ -40,3 +40,11 @@
     float:left;
   }
 }
+
+.clearer{
+  clear:both;
+}
+
+.ReactModal__Overlay{
+  z-index: 110;
+}
