--- a/sass/topnav.scss
+++ b/sass/topnav.scss
@@ -37,25 +37,3 @@
 	display: block;
 	height: 95px;
 }
-.clearer{
-	clear:both;
-}
-
-.formButtons {
-	padding: 10px 0;
-}
-.formButtons > * {
-	margin-left: 10px;
-}
-
-.evo-filters{
-	color: #333;
-}
-.evo-filters.panel{
-	padding:6px 1px 1px 6px !important;
-}
-
-
-.ReactModal__Overlay{
-	z-index: 110;
-}
